# IEEE-2030.5-Client

./: CMakeLists.txt  Doxyfile  c_gen.c  der_client.c  list.c  list.h  list_util.c  list_util.h  named.c  named.h  openssl.c  platform.c  queue.c  queue.h  schema_gen.c  se_core.c  se_core.h  se_types.h  targets.sh
linux/: platform.c
