cmake_minimum_required(VERSION 3.15)
project (IEEE-2030.5-Client VERSION 0.5.0)
include(GNUInstallDirs)
add_compile_options(-Os -ffunction-sections -Wl,--gc-sections -fno-asynchronous-unwind-tables -fPIC)
add_link_options(-Os -ffunction-sections -Wl,--gc-sections -fno-asynchronous-unwind-tables -fPIC)
add_library(se_core STATIC se_core.c named.c list.c queue.c)
target_compile_options(se_core PUBLIC -DOPENSSL_TLS)
add_executable(schema_gen schema_gen.c named.c list.c list_util.c)
add_executable(client_test client_test.c list_util.c) 
add_executable(csip_test csip_test.c) 
target_link_libraries(client_test se_core ssl crypto pthread dl)
target_link_libraries(csip_test se_core ssl crypto pthread dl)

# Set OPENSSL to find the built version
include_directories( /home/cutaway/Tools/ICS-Protos/openssl_1.1.0/include )
set(OPENSSL_ROOT_DIR /home/cutaway/Tools/ICS-Protos/openssl_1.1.0/ )
set(OPENSSL_INCLUDE_DIR /home/cutaway/Tools/ICS-Protos/openssl_1.1.0/include )
set(OPENSSL_LIBRARIES /home/cutaway/Tools/ICS-Protos/openssl_1.1.0/lib )
set(OPENSSL_CRYPTO_LIBRARY /home/cutaway/Tools/ICS-Protos/openssl_1.1.0/lib )
set(OPENSSL_USE_STATIC_LIBS TRUE)
find_package(OpenSSL)